# Shuttle

./: .babelrc  .eslintrc.js  .gitignore  .travis.yml  404.html  LICENSE  LICENSE.md  README.md  appveyor.yml  changelog.html  data.json  desktop.ini  go.mod  go.sum  index.html  main.go  main.js  package-lock.json  package.json  server.js
Updater/: Updater.js  index.js
app/: bookmarks.json  index.html  main.js
app/modules/: account.js  adapter.js  addonApi.js  applications.js  auth.js  bookmarks.js  config.json  controlbar.js  events.js  files.js  gd-service.js  index.js  injector.js  lang.js  lang.json  modales.js  quickSearch.js  searchengines.json  settings.js  shuttle-updater.js  sockets.js  store.js  sync.js  syncBkms.js  views.js  webview.js  webviewPreloader.js
app/views/: appStore.html  auth.html  browser.html  changelog.html  settings.html  storeInBuild.html  storeInbuild.html
assets/: colors.json  data.json  lang.json  main.js  style.css
assets/css/: Sortable.css  account.css  changelog.css  login.css  (+4 more)
lang/: lang.js
main/: appServer.js  google-auth.js  menu.js  secrets.js  updater.js
public/: global.css  index.html
res/: data.json  logo.ico.old  logo.png.old  main.js  style.css
settings/: FileSaver.js  index.html  style.css
src/: App.svelte  index.ejs  main.js
src-tauri/: Cargo.toml  tauri.conf.json
updater/: index.js
view/: .gitignore  README.md  index.html  no_internet.html  package-lock.json  package.json  rollup.config.js  window.go
views/: account.html  changelog.html  index.html  no_intenet.html  no_internet.html  settings.html
(+72 files in other folders)
