[package]
name = "Shuttle"
version = "4.0.0"
description = "The fastest access to your favorite applications"
authors = ["Robin Jullian"]
license = "NPOSL-3.0"
repository = "https://github.com/ShuttleBrowser/Shuttle.git"
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta-rc.4" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
